@@ -95,8 +95,16 @@ if [ X$MODE = Xprofile ]; then
   [ X"$FD" = X ]   || append IGPROF "$FD"
   [ X"$PERF" = X ] || append IGPROF "$PERF"
 
-  LD_PRELOAD=libIgProf.so
-  export LD_PRELOAD IGPROF
+  case $(uname) in
+    Darwin )
+      DYLD_BIND_AT_LAUNCH=1
+      DYLD_INSERT_LIBRARIES=$LOCALRT/lib/`scram arch`/libIgProf.dylib;
+      export DYLD_BIND_AT_LAUNCH DYLD_INSERT_LIBRARIES ;;
+    * )
+      LD_PRELOAD=libIgProf.so;
+      export LD_PRELOAD ;;
+  esac
+  export IGPROF
   exec "$@"
 
 else
