@@ -1,3 +1,7 @@
+2004-05-11  Lassi A. Tuura  <lat@iki.fi>
+
+	* scripts/igprof, IgProf.cc, IgProfPerf.cc: Fixes for OS X.
+
 2004-05-10  Lassi A. Tuura  <lat@iki.fi>
 
 	* scripts/igprof-analyse: Preliminary analysis.
